--- a/_config.yml
+++ b/_config.yml
@@ -17,11 +17,11 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "ko"
-title                    : "HELLO WORLD"
+title                    : "wooody92's blog"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Henry Yoon"
-description              : "즐겁게 살자"
+description              : "즐거운 개발 일기"
 url                      : "https://wooody92.github.io"
 baseurl                  : ""
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -95,8 +95,8 @@ analytics:
 # Site Author
 author:
   name             : "Henry Yoon"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "즐겁게 살자."
+  avatar           : "/assets/images/profile-img-1.png"
+  bio              : "즐거운 개발 일기"
   location         : "South Korea"
   email            : "pkower4@gmail.com"
   links:
